--- a/src/app/main/search/regular/regular.html
+++ b/src/app/main/search/regular/regular.html
@@ -456,7 +456,7 @@
                                 </div>
 
                                 <div class="col-md-6">
-                                    <label class=" uppercase font-weight  "> &nbsp;</label>
+                                    <label class=" uppercase font-weight  "> Education Category&nbsp;</label>
 
 
                                    <!-- <select multiple="multiple" class="multi-select form-control input-rounded "
