--- a/src/app/main/dashboard/dashboard.html
+++ b/src/app/main/dashboard/dashboard.html
@@ -237,10 +237,10 @@
                                 <div class="row" ng-repeat="item in newMatches.matches | limitTo:4">
                                     <div class=" col-xs-3 col-sm-3 col-md-2 ">
                                         <img ng-if="item.images.length > 0" class="imgae-circle"
-                                             ng-src="{{item.images[0]}}"/>
-                                        <img ng-if="item.gender == 'male'" class="imgae-circle"
+                                             ng-src="{{item.images[0].image}}"/>
+                                        <img ng-if="item.gender == 'male' && item.images.length == 0" class="imgae-circle"
                                              ng-src="/assets/defaultImages/male_card.jpg"/>
-<img ng-if="item.gender == 'female'" class="imgae-circle"
+<img ng-if="item.gender == 'female' && item.images.length == 0" class="imgae-circle"
                                              ng-src="/assets/defaultImages/female_card.jpg"/>
                                     </div>
                                     <div class="col-xs-1 col-sm-1 hidden-md hidden-lg"></div>
