--- a/src/app/navigation/dashboard/dbNavigation.html
+++ b/src/app/navigation/dashboard/dbNavigation.html
@@ -46,11 +46,11 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="row ">
-                                    <div class=" col-xs-6 col-sm-6 col-md-6 ">
-                                        <span class="account-type">Account Type :&nbsp;<span class="cuurent-account">Free</span> </span>
+                                    <div class=" col-xs-7 col-sm-7 col-md-7 ">
+                                        <span class="account-type">Account Type: &nbsp;<span style="text-transform: capitalize;font-size: 10px" class=" cuurent-account">{{package}}</span> </span>
                                     </div>
-                                    <div class=" col-xs-6 col-sm-6 col-md-6 ">
-                                        <span class="upgrade-info">upgrade now >></span>
+                                    <div class=" col-xs-5 col-sm-5 col-md-5 ">
+                                        <span ><a ui-sref="payment" class="upgrade-info" style="text-transform: capitalize;font-size: 10px">upgrade now >></a></span>
                                     </div>
                                 </div>
                             </div>
