--- a/src/app/toolbar/dashboard/dbToolbar.html
+++ b/src/app/toolbar/dashboard/dbToolbar.html
@@ -33,7 +33,7 @@
                 <!-- BEGIN PAGE TOP -->
                 <div class="page-top">
                     <div class="page-bar">
-                        <spans style="border-radius:10px;background-color: white;padding: 7px;font-size: 9px;margin-top:5px ">ACCOUNT TYPE:FREE | <span style="color: red">UPGRADE</span></spans>
+                        <spans style="border-radius:10px;background-color: white;padding: 7px;font-size: 10px;margin-top:5px ">Account Type: {{package}} | <span ><a ui-sref="payment" style="color: red">Upgrade</a></span></spans>
                     </div>
                     <!-- BEGIN HEADER SEARCH BOX -->
                     <!-- BEGIN TOP NAVIGATION MENU -->
