--- a/src/app/main/search/regular/regular.html
+++ b/src/app/main/search/regular/regular.html
@@ -364,8 +364,7 @@
                                     </select>-->
                                     <div style="font-size: 15px">
                                     <span ng-repeat="m in multiValue.religion" >
-                                        {{m.religion}},
-                                    </span>
+                                        {{m.religion}}, </span>
                                         </div>
                                     <multiselect ch-limit="10" show-search="true"
                                                  ng-model="multiValue.religion" options="religonList"
@@ -382,8 +381,7 @@
                                     </select>-->
                                     <div style="font-size: 15px">
                                     <span ng-repeat="m in multiValue.mothertongue" >
-                                        {{m.mothertongue}},
-                                    </span>
+                                        {{m.mothertongue}}, </span>
                                     </div>
                                     <multiselect ch-limit="10" show-search="true"
                                                  ng-model="multiValue.mothertongue" options="motherTongueList"
@@ -403,8 +401,7 @@
                                     </select>-->
                                     <div style="font-size: 15px">
                                     <span ng-repeat="m in multiValue.occupation" >
-                                        {{m.occupation}},
-                                    </span>
+                                        {{m.occupation}}, </span>
                                     </div>
 
                                     <multiselect ch-limit="10" show-search="true"
@@ -422,8 +419,7 @@
                                     <!--</select>-->
                                     <div style="font-size: 15px">
                                     <span ng-repeat="m in multiValue.country" >
-                                        {{m.country_name}},
-                                    </span>
+                                        {{m.country_name}}, </span>
                                     </div>
 
                                     <multiselect style="height:30px" ng-click="changes()" ch-limit="10" show-search="true"
@@ -446,8 +442,7 @@
                                     </select>-->
                                     <div style="font-size: 15px">
                                     <span ng-repeat="m in multiValue.education" >
-                                        {{m.education}},
-                                    </span>
+                                        {{m.education}}, </span>
                                     </div>
                                     <multiselect ch-limit="10" show-search="true"
                                                  ng-model="multiValue.education" options="educationList"
@@ -466,8 +461,7 @@
                                     </select>-->
                                     <div style="font-size: 15px">
                                     <span ng-repeat="m in multiValue.education_category" >
-                                        {{m.education_category}},
-                                    </span>
+                                        {{m.education_category}}, </span>
                                     </div>
 
                                     <multiselect ch-limit="10" show-search="true"
