--- a/src/app/main/search/regular/regular.html
+++ b/src/app/main/search/regular/regular.html
@@ -31,6 +31,7 @@
 
 
                                     <select class="form-control input-rounded " ng-model="regular.age_start">
+                                        <option  value="">Select</option>
                                         <option ng-selected ="regular.age_start == 18" ng-value="18">18</option>
                                         <option ng-selected ="regular.age_start == 19" value="19">19</option>
                                         <option ng-selected ="regular.age_start == 20" value="20">20</option>
@@ -50,6 +51,7 @@
                                     <label class=" uppercase font-weight "> &nbsp;</label>
 
                                     <select placeholder="select" class="form-control input-rounded " ng-model="regular.age_end">
+                                        <option  value="">Select</option>
                                         <option ng-selected="regular.age_end == 18" ng-value="18">18</option>
                                         <option ng-selected="regular.age_end == 19" value="19">19</option>
                                         <option ng-selected="regular.age_end == 20" value="20">20</option>
@@ -71,7 +73,7 @@
                                     <label class=" uppercase font-weight "> Height</label>
 
                                     <select class="form-control input-rounded " ng-model="regular.height_start">
-                                        <option>Select</option>
+                                        <option  value="">Select</option>
                                         <option ng-selected="profile.login_user.height == 137" value="137">137 cms
                                         </option>
                                         <option ng-selected="profile.login_user.height == 138" value="138">138 cms
@@ -189,7 +191,7 @@
                                     <label class=" uppercase font-weight "> &nbsp;</label>
 
                                     <select class="form-control input-rounded " ng-model="regular.height_end">
-                                        <option>Select</option>
+                                        <option  value="">Select</option>
                                         <option ng-selected="profile.login_user.height == 137" value="137">137 cms
                                         </option>
                                         <option ng-selected="profile.login_user.height == 138" value="138">138 cms
