--- a/src/app/main/recomendation/recomendationTop.html
+++ b/src/app/main/recomendation/recomendationTop.html
@@ -1,3 +1,4 @@
+<span ng-if="dailyMatches.length > 0">
 <div class="portlet light border-rounded">
     <div class="portlet-body">
         <div class="row">
@@ -101,4 +102,4 @@
 
     </div>
 </div>
-
+</span>
