--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -1,5 +1,5 @@
 <div class="col-md-12">
-    <div class="portlet light form-fit bordered col-md-offset-7 col-md-4 margin-top-10 reg-pannel">
+    <div class="portlet light form-fit bordered col-md-offset-7 col-md-5 margin-top-10 reg-pannel">
         <div class="portlet-title reg-pannel-title" style="height: 78px">
             <div class="caption">
                 <span class=" reg-header uppercase">Registration</span>
@@ -19,9 +19,9 @@
                 </div>
 
                 <div class="form-group text-dis" >
-                    <label class="col-md-3 control-label  reg-label">Profile for <span style="color: red">*</span></label>
+                    <label class="col-md-offset-1 col-md-3 control-label  reg-label">Profile for<span style="color: red">*</span></label>
 
-                    <div class="col-md-8">
+                    <div class="col-md-7">
                         <select class="form-control input-rounded" ng-model="reg.profile_for" ng-change="selectProfileFor()">
                             <option value="" ng-selected="true" selected="selected">Select</option>
                             <option value="myself">Myself</option>
@@ -40,9 +40,9 @@
                 </div>
 
                 <div class="form-group text-dis">
-                    <label class="col-md-3 control-label reg-label ">Name <span style="color: red">*</span></label>
+                    <label class="col-md-offset-1 col-md-3 control-label reg-label ">Name<span style="color: red">*</span></label>
 
-                    <div class="col-md-8">
+                    <div class="col-md-7">
                         <input type="text" required class="form-control  input-rounded" placeholder="Name" ng-model="reg.name">
                     <span ng-if="showName">
                         <div class="user-error-msg-arrow" ></div>
@@ -52,9 +52,9 @@
                 </div>
 
                 <div class="form-group text-dis">
-                    <label class="col-md-3 control-label reg-label">Gender <span style="color: red">*</span></label>
+                    <label class="col-md-offset-1 col-md-3 control-label reg-label">Gender<span style="color: red">*</span></label>
 
-                    <div class="col-md-8 margin-right-30">
+                    <div class="col-md-7 margin-right-30">
                             <div class="col-md-4">
 
                                     <label class="checkbox-inline" class="custon-text">
@@ -86,12 +86,12 @@
                     </div>
                 </div>
                 <div class="form-group text-dis">
-                    <label class="col-md-3 control-label reg-label">Date of Birth <span style="color: red">*</span></label>
+                    <label class="col-md-offset-1 col-md-3 control-label reg-label">Date of Birth<span style="color: red">*</span></label>
 
                    <!-- <div class="col-md-8">
                         <input type="date" required class="form-control input-rounded" ng-model="reg.dob" placeholder="Date of Birth">
                     </div>-->
-                    <div class="col-md-6">
+                    <div class="col-md-7">
                         <p class="input-group" style="margin-bottom: 5px">
                             <input type="text" readonly='readonly' class="form-control" uib-datepicker-popup="{{format}}" uib-datepicker-popup ng-model="reg.dob" is-open="popup2.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
           <span class="input-group-btn">
@@ -107,10 +107,10 @@
 
                 </div>
                 <div class="form-group text-dis">
-                    <label class="col-md-3 control-label reg-label ">Mother Tongue <span style="color: red">*</span></label>
+                    <label class="col-md-offset-1 col-md-3 control-label reg-label ">Mother Tongue<span style="color: red">*</span></label>
 
 
-                    <div class="col-md-8">
+                    <div class="col-md-7">
                         <select class="form-control input-rounded "
                                 ng-model="reg.mothertongue" required>
                             <option  value="">Select</option>
@@ -123,10 +123,10 @@
                     </div>
                 </div>
                 <div class="form-group text-dis">
-                    <label class="col-md-3 control-label reg-label">Religion <span style="color: red">*</span></label>
+                    <label class="col-md-offset-1 col-md-3 control-label reg-label">Religion<span style="color: red">*</span></label>
 
 
-                    <div class="col-md-8">
+                    <div class="col-md-7">
                         <select class="form-control input-rounded "
                                 ng-model="reg.religion" required>
                             <option  value="">Select</option>
@@ -140,9 +140,9 @@
                 </div>
 
                 <div class="form-group text-dis">
-                    <label class="col-md-3 control-label reg-label">E-mail <span style="color: red">*</span></label>
+                    <label class="col-md-offset-1 col-md-3 control-label reg-label">E-mail<span style="color: red">*</span></label>
 
-                    <div class="col-md-8">
+                    <div class="col-md-7">
                         <input type="email" ng-model="reg.email" required class="form-control reg-box input-rounded" placeholder="Email Address">
                     <span ng-if="showemail">
                         <div class="user-error-msg-arrow" ></div>
@@ -151,9 +151,9 @@
                     </div>
                 </div>
                 <div class="form-group text-dis">
-                    <label class="col-md-3 control-label reg-label">Mobile Number <span style="color: red">*</span></label>
+                    <label class="col-md-offset-1 col-md-3 control-label reg-label">Mobile Number<span style="color: red">*</span></label>
 
-                    <div class="col-md-3">
+                    <div class="col-md-2">
                         <select class="form-control " required ng-model="reg.code">
                             <option ng-selected="true" selected="selected" value="91">+ 91</option>
                             <option value="04">+ 04</option>
@@ -173,9 +173,9 @@
                 </div>
 
                 <div class="form-group text-dis">
-                    <label class="col-md-3 control-label reg-label">Password <span style="color: red">*</span></label>
+                    <label class="col-md-offset-1 col-md-3 control-label reg-label">Password<span style="color: red">*</span></label>
 
-                    <div class="col-md-8">
+                    <div class="col-md-7">
                         <input required type="password" class="form-control input-rounded" ng-model="reg.password" placeholder="Password"
                                style="margin-rightt: 5%">
                         <span ng-if="showPassword">
@@ -195,9 +195,9 @@
 
                 <!--<span class="help-inline"> Inline help. </span>-->
                 <div class="form-group text-dis">
-                    <label class="col-md-3 control-label"></label>
+                    <label class="col-md-offset-1 col-md-3 control-label"></label>
 
-                    <div class="col-md-8">
+                    <div class="col-md-7">
                         <button  type="button" class=" center-block col-md-12 btn red input-rounded"
                                 ng-click="vm.registerCandidate()">
                             Register Free
