--- a/src/app/main/recomendation/courosal.html
+++ b/src/app/main/recomendation/courosal.html
@@ -1,3 +1,3 @@
-<div class="row">
-    <div class="col-md-12"></div>
-</div>
+<!--<div class="row">-->
+    <!--<div class="col-md-12"></div>-->
+<!--</div>-->
